passed the stream practice